# exercicios_python_brasil

./: pyproject.toml
old_workflows/: corretor_de_exercicios_secao_01.yml
secao_01_estrutura_sequencial/: exercicios_estrutura_sequencial.py
secao_02_estrutura_de_decisao/: ex_02_positivo_ou_negativo.py  ex_05_notas_parciais.py  ex_06_maior_numero_de_3_numeros.py  ex_11_salario_tabajara.py  ex_15_triangulo.py  ex_21_troco.py  ex_22_par_ou_impar.py  ex_23_inteiro_ou_decimal.py  ex_25_sherlock.py  ex_26_posto_de_gasolina.py  ex_28_mercado_tabajara.py
secao_03_estrutura_de_repeticao/: ex_04_crescimento_populacional.py  ex_05_crescimento_populacional_parametrizavel.py  ex_06_numeros_1_a_20.py  ex_07_maior_de_5_numeros.py  ex_08_soma_e_media_de_5_numeros.py  ex_09_numeros_impares_de_1_a_50.py  ex_10_gerar_numeros_de_intervalo.py  ex_11_gerar_numeros_de_intervalo_e_somar.py  ex_12_tabuada.py  ex_13_potenciacao.py  ex_14_qtde_pares_e_impares.py  ex_15_fibonnacci_ate_n.py  ex_16_fibonnacci_ate_valor_maior_que_500.py  ex_17_fatorial.py  ex_18_estatisticas_de_n_numeros.py  ex_19_estatisticas_de_n_numeros_com_limitacao.py  ex_20_fatorial_com_limitacao.py  ex_21_numero_primo.py  ex_22_numero_primo_divisores.py  ex_23_primos_menores_que_um_numero.py  ex_24_media_artmetica.py  ex_25_classificador_de_turma.py  ex_33_estatisticas_de_temperaturas.py  ex_39_sala_de_aula.py  ex_44_eleicao_presidencial.py
secao_04_exercicios_lista/: ex_02_vetores_inverso.py  ex_05_vetore_par_e_impar.py  ex_06_calculador_de_media.py  ex_09_soma_de_quadrados.py  ex_10_intercalacao_de_vetores.py  (+2 more)
(+3 files in other folders)
