[tool.poetry]
name = "exercicios-pybrasil"
version = "0.1.0"
description = "Repositório para correção automatiza da da lista de exercício da comunidade Python Brasil"
authors = ["William Foschiera"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"
ruff = "^0.0.226"
mypy = "^0.991"
isort = "^5.11.4"
black = "^22.12.0"

[virtualenvs]
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
old_finders = true

[tool.ruff]
line-length = 120
show-source = true

[tool.mypy]
follow_imports = "normal"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
ignore_missing_imports = true


[tool.pytest.ini_options]
python_files = ["test_*.py",]
filterwarnings = [
    "error",
    'ignore::DeprecationWarning',
]
